# shopping_list_server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.MD  docker-compose.yml  generate_keys.sh  run.yml
migrations/: 20210924164311_init.down.sql  20210924164311_init.up.sql
src/: lib.rs  main.rs
src/middlewares/: auth.rs  error.rs  mod.rs
src/models/: item.rs  mod.rs  sharing.rs  shopping_list.rs  unit.rs  user.rs
src/routes/: items.rs  mod.rs  sharing.rs  shopping_list.rs  user.rs
src/services/: database.rs  items.rs  mod.rs  shopping_list.rs  user.rs
